<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cristiane.investsimulatorapp.InputActivity">

    <TextView
        android:id="@+id/tv_value_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_input"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_value_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_value_input"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/edit_text_margin"
        android:gravity="center_horizontal"
        android:hint="@string/value_input_hint"
        android:textSize="@dimen/input_font_size"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_value_input_title"
        app:layout_constraintBottom_toTopOf="@id/tv_date_input_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_date_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_input"
        app:layout_constraintTop_toBottomOf="@id/et_value_input"
        app:layout_constraintBottom_toTopOf="@id/et_date_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_date_input"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/edit_text_margin"
        android:gravity="center_horizontal"
        android:hint="@string/date_input_hint"
        android:textSize="@dimen/input_font_size"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_date_input_title"
        app:layout_constraintBottom_toTopOf="@id/tv_cdi_percentage_input_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_cdi_percentage_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cdi_percentage_input"
        app:layout_constraintTop_toBottomOf="@id/et_date_input"
        app:layout_constraintBottom_toTopOf="@id/et_cdi_percentage_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_cdi_percentage_input"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginBottom="@dimen/edit_text_margin"
        android:gravity="center_horizontal"
        android:hint="@string/cdi_percentage_input_hint"
        android:textSize="@dimen/input_font_size"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_cdi_percentage_input_title"
        app:layout_constraintBottom_toTopOf="@id/bt_simulate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/bt_simulate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/simulate_button"
        app:layout_constraintTop_toBottomOf="@id/et_cdi_percentage_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
