<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    tools:context=".ui.ResultActivity">

    <TextView
        android:id="@+id/tv_result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1.088"
        android:textSize="@dimen/input_font_size"
        app:layout_constraintTop_toBottomOf="@id/tv_result_title"
        app:layout_constraintBottom_toTopOf="@id/tv_total_income"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_total_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_section_separator"
        android:text="@string/total_income"
        app:layout_constraintTop_toBottomOf="@id/tv_value"
        app:layout_constraintBottom_toTopOf="@id/tv_applied_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_applied_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/applied_value"
        app:layout_constraintTop_toBottomOf="@id/tv_total_income"
        app:layout_constraintBottom_toTopOf="@id/tv_gross_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_applied_value_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_applied_value"
        app:layout_constraintLeft_toRightOf="@id/tv_applied_value" />

    <TextView
        android:id="@+id/tv_gross_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/gross_value"
        app:layout_constraintTop_toBottomOf="@id/tv_applied_value"
        app:layout_constraintBottom_toTopOf="@id/tv_income_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_gross_value_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_gross_value"
        app:layout_constraintLeft_toRightOf="@id/tv_gross_value" />

    <TextView
        android:id="@+id/tv_income_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/income_value"
        app:layout_constraintTop_toBottomOf="@id/tv_gross_value"
        app:layout_constraintBottom_toTopOf="@id/tv_income_tax"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_income_value_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_income_value"
        app:layout_constraintLeft_toRightOf="@id/tv_income_value" />

    <TextView
        android:id="@+id/tv_income_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/income_tax"
        app:layout_constraintTop_toBottomOf="@id/tv_income_value"
        app:layout_constraintBottom_toTopOf="@id/tv_net_value"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_income_tax_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_income_tax"
        app:layout_constraintLeft_toRightOf="@id/tv_income_tax" />

    <TextView
        android:id="@+id/tv_net_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_section_separator"
        android:text="@string/net_value"
        app:layout_constraintTop_toBottomOf="@id/tv_income_tax"
        app:layout_constraintBottom_toTopOf="@id/tv_redemption_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_net_value_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 1000,00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_net_value"
        app:layout_constraintLeft_toRightOf="@id/tv_net_value" />

    <TextView
        android:id="@+id/tv_redemption_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/redemption_date"
        app:layout_constraintTop_toBottomOf="@id/tv_net_value"
        app:layout_constraintBottom_toTopOf="@id/tv_consecutive_days"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_redemption_date_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="05/07/2018"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_redemption_date"
        app:layout_constraintLeft_toRightOf="@id/tv_redemption_date" />

    <TextView
        android:id="@+id/tv_consecutive_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/consecutive_days"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_redemption_date"
        app:layout_constraintBottom_toTopOf="@id/tv_monthly_income"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_consecutive_days_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="365"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_consecutive_days"
        app:layout_constraintLeft_toRightOf="@id/tv_consecutive_days" />

    <TextView
        android:id="@+id/tv_monthly_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/monthly_income"
        app:layout_constraintTop_toBottomOf="@id/tv_consecutive_days"
        app:layout_constraintBottom_toTopOf="@id/tv_cdi_percentage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_monthly_income_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_monthly_income"
        app:layout_constraintLeft_toRightOf="@id/tv_monthly_income" />

    <TextView
        android:id="@+id/tv_cdi_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/cdi_percentage"
        app:layout_constraintTop_toBottomOf="@id/tv_monthly_income"
        app:layout_constraintBottom_toTopOf="@id/tv_annual_profitability"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_cdi_percentage_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_cdi_percentage"
        app:layout_constraintLeft_toRightOf="@id/tv_cdi_percentage" />

    <TextView
        android:id="@+id/tv_annual_profitability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/result_activity_row_separator"
        android:text="@string/annual_profitability"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_cdi_percentage"
        app:layout_constraintBottom_toTopOf="@id/tv_period_profitability"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_annual_profitability_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_annual_profitability"
        app:layout_constraintLeft_toRightOf="@id/tv_annual_profitability" />

    <TextView
        android:id="@+id/tv_period_profitability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_profitability"
        android:layout_marginBottom="@dimen/result_activity_section_separator"
        app:layout_constraintTop_toBottomOf="@id/tv_annual_profitability"
        app:layout_constraintBottom_toTopOf="@id/bt_simulate_again"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_period_profitability_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100%"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_period_profitability"
        app:layout_constraintLeft_toRightOf="@id/tv_period_profitability" />

    <Button
        android:id="@+id/bt_simulate_again"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:text="@string/simulate_again_button"
        android:textColor="@android:color/white"
        android:background="@drawable/cyan_button_drawable"
        app:layout_constraintTop_toBottomOf="@id/tv_period_profitability"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>